music player runing gif add

--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
                 </div>
             </section>
         </div>
-        <div>
+        <div class="disk">
             <h1>audio track</h1>
+            <div class="diskrun">
+                <img src="img/playergif.gif" alt="musicPlayer">
+            </div>
         </div>
         <div>
             <h1>Lyrics</h1>
