--- a/PublicDasboard.html
+++ b/PublicDasboard.html
@@ -14,16 +14,64 @@
             <section>
                 <p>playerList</p>
                 <div class="cover">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis reprehenderit aliquam ullam
-                    quae aspernatur asperiores aut at dolor consequatur voluptatibus. In nesciunt facilis porro,
-                    assumenda magni quasi vitae reprehenderit dicta?Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Mollitia voluptatibus autem iusto itaque blanditiis iste cumque facere, unde officiis
-                    molestiae, eum dolorem. Illo quaerat temporibus aspernatur rem hic fuga deserunt! Lorem ipsum dolor
-                    sit amet consectetur adipisicing elit. Aspernatur veritatis quibusdam blanditiis earum similique
-                    numquam, ab in id debitis autem. Voluptate possimus ipsa eligendi officia doloremque voluptatibus ex
-                    optio culpa. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime fuga distinctio ullam,
-                    recusandae consectetur ipsam tempora consequuntur. Inventore voluptatum sint veniam et nisi
-                    quibusdam dolorem, tempore repellat quasi eligendi dolor!
+                    <table>
+                        <tr>
+                            <td>Name</td>
+                            <td><p>HH:MM:SS</p></td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>HH:MM:SS</td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>HH:MM:SS</td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>HH:MM:SS</td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>HH:MM:SS</td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>HH:MM:SS</td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>HH:MM:SS</td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>HH:MM:SS</td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>HH:MM:SS</td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>HH:MM:SS</td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>HH:MM:SS</td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>HH:MM:SS</td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>HH:MM:SS</td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>HH:MM:SS</td>
+                        </tr>
+                    </table>
                 </div>
             </section>
             <section>
