output Dashboard is almost ready now move to user ui

--- a/PublicDasboard.html
+++ b/PublicDasboard.html
@@ -11,114 +11,57 @@
 <body>
     <main>
         <div class="playerList">
-            <section>
-                <p>playerList</p>
-                <div class="cover">
-                    <table>
-                        <tr>
-                            <td>Name</td>
-                            <td><p>HH:MM:SS</p></td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>HH:MM:SS</td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>HH:MM:SS</td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>HH:MM:SS</td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>HH:MM:SS</td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>HH:MM:SS</td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>HH:MM:SS</td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>HH:MM:SS</td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>HH:MM:SS</td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>HH:MM:SS</td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>HH:MM:SS</td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>HH:MM:SS</td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>HH:MM:SS</td>
-                        </tr>
-                        <tr>
-                            <td>Name</td>
-                            <td>HH:MM:SS</td>
-                        </tr>
-                    </table>
-                </div>
-            </section>
-            <section>
-                <p>Task 3</p>
-                <div class="cover">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis reprehenderit aliquam ullam
-                    quae aspernatur asperiores aut at dolor consequatur voluptatibus. In nesciunt facilis porro,
-                    assumenda magni quasi vitae reprehenderit dicta?Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Mollitia voluptatibus autem iusto itaque blanditiis iste cumque facere, unde officiis
-                    molestiae, eum dolorem. Illo quaerat temporibus aspernatur rem hic fuga deserunt! Lorem ipsum dolor
-                    sit amet consectetur adipisicing elit. Aspernatur veritatis quibusdam blanditiis earum similique
-                    numquam, ab in id debitis autem. Voluptate possimus ipsa eligendi officia doloremque voluptatibus ex
-                    optio culpa. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime fuga distinctio ullam,
-                    recusandae consectetur ipsam tempora consequuntur. Inventore voluptatum sint veniam et nisi
-                    quibusdam dolorem, tempore repellat quasi eligendi dolor!
-                </div>
-            </section>
-            <section>
-                <p>Task 2</p>
-                <div class="cover">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis reprehenderit aliquam ullam
-                    quae aspernatur asperiores aut at dolor consequatur voluptatibus. In nesciunt facilis porro,
-                    assumenda magni quasi vitae reprehenderit dicta?Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Mollitia voluptatibus autem iusto itaque blanditiis iste cumque facere, unde officiis
-                    molestiae, eum dolorem. Illo quaerat temporibus aspernatur rem hic fuga deserunt! Lorem ipsum dolor
-                    sit amet consectetur adipisicing elit. Aspernatur veritatis quibusdam blanditiis earum similique
-                    numquam, ab in id debitis autem. Voluptate possimus ipsa eligendi officia doloremque voluptatibus ex
-                    optio culpa. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime fuga distinctio ullam,
-                    recusandae consectetur ipsam tempora consequuntur. Inventore voluptatum sint veniam et nisi
-                    quibusdam dolorem, tempore repellat quasi eligendi dolor!
-                </div>
-            </section>
-            <section>
-                <p>Task 1</p>
-                <div class="cover">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis reprehenderit aliquam ullam
-                    quae aspernatur asperiores aut at dolor consequatur voluptatibus. In nesciunt facilis porro,
-                    assumenda magni quasi vitae reprehenderit dicta?Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Mollitia voluptatibus autem iusto itaque blanditiis iste cumque facere, unde officiis
-                    molestiae, eum dolorem. Illo quaerat temporibus aspernatur rem hic fuga deserunt! Lorem ipsum dolor
-                    sit amet consectetur adipisicing elit. Aspernatur veritatis quibusdam blanditiis earum similique
-                    numquam, ab in id debitis autem. Voluptate possimus ipsa eligendi officia doloremque voluptatibus ex
-                    optio culpa. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime fuga distinctio ullam,
-                    recusandae consectetur ipsam tempora consequuntur. Inventore voluptatum sint veniam et nisi
-                    quibusdam dolorem, tempore repellat quasi eligendi dolor!
-                </div>
-            </section>
+        
+            <h1>playerList</h1>
+            <div class="cover">
+                <table>
+                    <tr><td><p>HH:MM:SS</p></td><td>Name</td><td>1</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>2</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>3</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>4</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>5</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>6</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>7</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>8</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>9</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>10</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>11</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>12</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>13</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>14</td></tr>
+                    <tr><td><p>HH:MM:SS</p></td><td>Name</td><td>15</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>16</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>17</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>18</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>19</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>20</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>21</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>22</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>23</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>24</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>25</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>26</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>27</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>28</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>29</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>30</td></tr>
+                    <tr><td><p>HH:MM:SS</p></td><td>Name</td><td>31</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>32</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>33</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>34</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>35</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>36</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>37</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>38</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>39</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>40</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>41</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>42</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>43</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>44</td></tr>
+                    <tr><td>HH:MM:SS</td><td>Name</td><td>45</td></tr>
+                </table>                
+            </div>
         </div>
         <div class="disk">
             <h1>audio track</h1>
