change dir for admin

--- a/drag.html
+++ b/drag.html
@@ -140,7 +140,7 @@
     }
 
     function goToCompiler() {
-      window.location.href = "codeedit.html";  // Update with actual page
+      window.location.href = "compiler/codeedit.html";  // Update with actual page
     }
   </script>
 
