--- a/compiler/codeedit.html
+++ b/compiler/codeedit.html
@@ -1,110 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Java Online Compiler</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css"/>
+  <meta charset="UTF-8">
+  <title>Java Code Runner</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 20px;
-      background: #f2f2f2;
+      font-family: Arial;
+      background: #f4f4f4;
+      padding: 20px;
     }
-    h1 {
-      text-align: center;
-    }
-    .editor-container {
-      width: 90%;
-      margin: auto;
-    }
-    #codeEditor {
-      height: 300px;
-      border: 1px solid #ccc;
-    }
-    textarea, pre {
+    textarea, input {
       width: 100%;
       font-family: monospace;
       font-size: 16px;
+      padding: 10px;
+      margin-bottom: 10px;
     }
     textarea {
-      margin-top: 10px;
-      height: 100px;
+      height: 200px;
     }
     button {
-      margin-top: 15px;
       padding: 10px 20px;
-      background-color: #007bff;
+      font-size: 16px;
+      background: #4CAF50;
       color: white;
       border: none;
-      font-size: 16px;
       cursor: pointer;
     }
-    pre {
-      background: #000;
-      color: #0f0;
-      padding: 15px;
-      overflow-x: auto;
+    #output {
+      background: #fff;
+      border: 1px solid #ccc;
+      margin-top: 20px;
+      padding: 10px;
+      font-family: monospace;
+      white-space: pre-wrap;
     }
   </style>
 </head>
 <body>
 
-  <h1>Java Online Compiler</h1>
-  <div class="editor-container">
-    <textarea id="code" placeholder="Write your Java code here...">public class Hello {
+<h2>Java Code Compiler</h2>
+
+<label><strong>Enter Class Name:</strong></label>
+<input type="text" id="className" placeholder="Main" value="Main">
+
+<label><strong>Java Code:</strong></label>
+<textarea id="codeEditor">
+// Sample Java Code
+import java.util.Scanner;
+public class Main {
     public static void main(String[] args) {
-        System.out.println("Hello, World!");
+        Scanner sc = new Scanner(System.in);
+        int a = sc.nextInt();
+        int b = sc.nextInt();
+        System.out.println(a + b);
     }
-}</textarea>
+}
+</textarea>
 
-    <label for="customInput"><strong>Custom Input (optional):</strong></label>
-    <textarea id="customInput" placeholder="Enter input here...">5
-10</textarea>
+<label><strong>Custom Input:</strong></label>
+<textarea id="customInput">2 3</textarea>
 
-    <button onclick="runCode()">Run Code</button>
+<button onclick="runCode()">Run Code</button>
 
-    <h3>Output:</h3>
-    <pre id="output">Waiting for code...</pre>
-  </div>
+<div id="output">Output will be shown here...</div>
 
-  <!-- CodeMirror -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/clike/clike.min.js"></script>
+<script>
+function runCode() {
+  const className = document.getElementById("className").value.trim();
+  const code = document.getElementById("codeEditor").value;
+  const input = document.getElementById("customInput").value;
 
-  <script>
-    // Initialize CodeMirror
-    const codeArea = document.getElementById("code");
-    const editor = CodeMirror.fromTextArea(codeArea, {
-      mode: "text/x-java",
-      theme: "default",
-      lineNumbers: true
-    });
+  fetch('back/compile-java.php', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json'
+    },
+    body: JSON.stringify({
+      className: className,
+      code: code,
+      input: input
+    })
+  })
+  .then(response => response.json())
+  .then(data => {
+    document.getElementById("output").innerText = data.output;
+  })
+  .catch(error => {
+    document.getElementById("output").innerText = "Error: " + error;
+  });
+}
+</script>
 
-    function runCode() {
-      const code = editor.getValue();
-      const customInput = document.getElementById("customInput").value;
-
-      document.getElementById("output").textContent = "Compiling and running...";
-
-      fetch("backend/compile-java.php", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-          code: code,
-          customInput: customInput
-        })
-      })
-      .then(res => res.json())
-      .then(data => {
-        document.getElementById("output").textContent = data.visibleOutput;
-      })
-      .catch(err => {
-        document.getElementById("output").textContent = "Error: " + err;
-      });
-    }
-  </script>
 </body>
 </html>
